--- a/src/app/authentication/pages/register/register.component.html
+++ b/src/app/authentication/pages/register/register.component.html
@@ -10,7 +10,7 @@
             <!-- CONTAINER OPEN -->
             <div class="col col-login mx-auto mt-7">
                 <div class="text-center">
-                    <a routerLink="/dashboard"><img src="../../../../../theme-sash-front/src/assets/images/brand/logo-white.png" class="header-brand-img m-0" alt=""></a>
+                    <a routerLink="/dashboard"><img src="../../../../../../theme-sash-front/src/assets/images/brand/logo-white.png" class="header-brand-img m-0" alt=""></a>
                 </div>
             </div>
             <div class="container-login100">
