--- a/src/app/shared/layout-components/header/header.component.html
+++ b/src/app/shared/layout-components/header/header.component.html
@@ -16,10 +16,10 @@
         />
       </a>
       <!-- LOGO -->
-      <div class="main-header-center ms-3 d-none d-lg-block">
+      <!--<div class="main-header-center ms-3 d-none d-lg-block">
         <input type="search" class="form-control dropdown-toggle"
           placeholder="Search for results..." aria-label="Search" tabindex="1" [(ngModel)]="text"
-          [ngModelOptions]="{standalone: true}" (keyup)="Search(text)" autocomplete="off"/>
+          [ngModelOptions]="{standalone: true}" autocomplete="off"/>
         <button class="btn px-0 pt-2 search-header">
           <i class="fe fe-search" aria-hidden="true"></i>
         </button>
@@ -41,7 +41,7 @@
             </li>
           </ul>
         </ng-template>
-      </div>
+      </div>-->
       <div class="d-flex order-lg-2 ms-auto header-right-icons">
         <div class="dropdown d-none">
           <a
@@ -104,11 +104,10 @@
                 <a
                   class="nav-link icon text-center"
                   data-bs-target="#country-selector"
-                  data-bs-toggle="modal"
-                  (click)="open(content)"
-                >
+                  data-bs-toggle="modal">
+<!--                  (click)="open(content)"-->
                   <i class="fe fe-globe"></i
-                  ><span class="fs-16 ms-2 d-none d-xl-block">English</span>
+                  ><span class="fs-16 ms-2 d-none d-xl-block">Perú</span>
                 </a>
               </div>
               <!-- COUNTRY -->
@@ -122,15 +121,7 @@
                 </a>
               </div>
               <!-- Theme-Layout -->
-                <div class="dropdown d-flex shopping-cart" ngbDropdown>
-                  <a
-                    class="nav-link icon text-center"
-                    ngbDropdownToggle
-                    data-bs-toggle="dropdown"
-                  >
-                    <i class="fe fe-shopping-cart"></i
-                    ><span class="badge bg-secondary header-badge">{{totalLength}}</span>
-                  </a>
+
               <!-- CART -->
               <!-- FULL-SCREEN -->
               <div ngbDropdown class="dropdown d-flex notifications">
@@ -396,7 +387,7 @@
   </div>
 </div>
 <!-- /app-Header -->
-
+<!--MODAL COUNTRY-->
 <ng-template #content let-modal>
   <div class="modal-header align-items-center">
     <h6 class="modal-title">Choose Country</h6>
