--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,7 +3,7 @@
 [Master Stylesheet]
 
 Project        :   sash – Bootstrap 5  Admin & Dashboard Template
-Copyright      :   Spruko Technologies Private Limited 
+Copyright      :   Spruko Technologies Private Limited
 Author         :   Spruko
 Author URL     :   https://themeforest.net/user/spruko
 Support	       :   support@spruko.com
@@ -24852,7 +24852,7 @@ ul.timeline>li:before {
 }
 
 .header .notifications-menu {
-    height: 300px;
+    height: auto;
 }
 
 .header .message-menu-scroll {
