--- a/src/app/authentication/pages/login-page/login-page.component.html
+++ b/src/app/authentication/pages/login-page/login-page.component.html
@@ -15,9 +15,9 @@
                                           <ng-template ngbNavContent>
                                               <form [formGroup]="loginForm" (ngSubmit)="login()">
                                                   <div class="text-center title-style mb-6">
-                                                      <h1 class="mb-2">HEMILIA</h1>
+                                                      <h1 class="mb-2">AIGO</h1>
                                                       <hr>
-                                                      <p class="text-muted">Iniciar Sesión | HERITAGE</p>
+                                                      <p class="text-muted">Iniciar Sesión | AIGO</p>
                                                   </div>
                                                   <div class="input-group mb-3">
                                                     <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
