--- a/src/app/shared/layout-components/footer/footer.component.html
+++ b/src/app/shared/layout-components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row align-items-center flex-row-reverse">
             <div class="col-md-12 col-sm-12 text-center">
-                 Copyright © 2022 <a href="javascript:void(0);">HEMILIA</a>. Diseñado <span class="fa fa-spotify text-primary"></span> por <a href="javascript:void(0);"> Iprime. </a> Todos los Derechos Resevados.
+                 Copyright © 2022 <a href="javascript:void(0);">AIGO</a>. Diseñado <span class="fa fa-spotify text-primary"></span> por <a href="javascript:void(0);"> Iprime. </a> Todos los Derechos Resevados.
             </div>
         </div>
     </div>
