--- a/src/app/authentication/pages/login-page/login-page.component.html
+++ b/src/app/authentication/pages/login-page/login-page.component.html
@@ -41,7 +41,10 @@
                                                       </button>
                                                   </div>
                                                   <div class="text-center col-12">
-                                                      <a routerLink="/custompages/forgot-password" class="text-primary ms-1 btn">Recuperar contraseña</a>
+                                                    <a routerLink="/custompages/forgot-password" class="text-primary ms-1 btn">
+                                                        Recuperar contraseña</a>
+                                                    <a routerLink="/auth/register" class="text-primary ms-1 btn">
+                                                        Registrarse</a>
                                                   </div>
                                               </form>
                                           </ng-template>
