--- a/src/app/panel/pages/dashboard/dashboard.component.html
+++ b/src/app/panel/pages/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<p>dashboard works!</p>
+<div class="page-header">
+    <h1 class="page-title my-auto">Crypto</h1>
+    <div>
+        <ol class="breadcrumb mb-0">
+            <li class="breadcrumb-item"> <a href="javascript:void(0)"><i class="fe fe-home"></i></a></li> 
+            <li class="breadcrumb-item"> <a href="javascript:void(0)">Dashboard</a></li>
+        </ol> 
+    </div>
+</div>
