--- a/src/app/panel/pages/red/red.component.html
+++ b/src/app/panel/pages/red/red.component.html
@@ -1,6 +1,14 @@
-<div>Link Selected: {{ hasSelectedLink }} <button *ngIf="hasSelectedLink" (click)="deleteSelectedLink()">Delete</button></div>
-<div>Node Selected: {{ hasSelectedNode }} <button *ngIf="hasSelectedNode" (click)="cancelSelectedNode()">Cancel</button></div>
-<div #chartContainer class="chart-container">
-  <svg id="{{ this.id }}-svg">
-  </svg>
+<div class="page-header">
+  <h1 class="page-title my-auto">Crypto</h1>
+  <div>
+      <ol class="breadcrumb mb-0">
+          <li class="breadcrumb-item"> <a href="javascript:void(0)"><i class="fe fe-home"></i></a></li>
+          <li class="breadcrumb-item"> <a href="javascript:void(0)">Dashboard</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Mi Red</li>
+      </ol>
+  </div>
+</div>
+<div class="card">
+  <div class="card-title text-center" style="margin-top: 30px;"><h2>Mi Red</h2></div>
+  <app-d3-org-chart [data]="data"></app-d3-org-chart>
 </div>
