--- a/src/app/shared/layout-components/header/header.component.html
+++ b/src/app/shared/layout-components/header/header.component.html
@@ -127,7 +127,7 @@
                 </div>
               </div>
               <!-- NOTIFICATIONS -->
-              <div ngbDropdown class="dropdown d-flex message">
+              <!-- <div ngbDropdown class="dropdown d-flex message">
                 <a ngbDropdownToggle class="nav-link icon text-center" data-bs-toggle="dropdown">
                   <i class="fe fe-message-square"></i
                   ><span class="pulse-danger"></span>
@@ -230,7 +230,7 @@
                     >See all Messages</a
                   >
                 </div>
-              </div>
+              </div> -->
               <!-- MESSAGE-BOX -->
               <div class="dropdown d-flex header-settings" >
                 <a (click)="toggleSidebarNotification()"
